# bab3fq_DS5111su24_lab_01

./: .gitignore  Lab_2.py  README.md  makefile  pyproject.toml  pytest.ini  requirements.txt  tokenizer.py
.github/workflows/: validations.yml
src/bab3fq_package/: __init__.py  tokenizer.py
tests/: test_clean_text.py  test_complex_group_tests.py  test_count_words.py  test_environment.py  test_fail_on_purpose.py  test_tokenize.py
