[build-system]
requires = ["setuptools>=61.0]
build-backend = "setuptools.build_meta"

[project]
name = "bab3fq_package"
version = "0.0.1"
authors = [
    { name="Brian Blancato", email="bab3fq@virgina.edu"},
]
description = "A package to process text"
readme = "README.MD"
requires = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BrianBlancato/bab3fq_DS5111su24_lab_01"
Issues = "https://github.com/"